# alpencode

./: .gitignore  README.md  pyproject.toml  release.sh  whisper_dictation.py
vscode-extension/: .vscodeignore  LICENSE  README.md  package-lock.json  package.json
vscode-extension/media/: settings.html
vscode-extension/python/: backend.py  main.py  requirements.txt
vscode-extension/python/core/: audio.py  config.py  system.py  transcriber.py
vscode-extension/src/: extension.ts  installer.ts  manager.ts
vscode-extension/src/ui/: settingsPanel.ts  statusBar.ts
